syntax = "proto3";

option csharp_namespace = "myungbae";  // C# 네임스페이스 설정

service GameService {
    rpc getUserInfo (UserInfoRequest) returns (UserInfoResponse);
    rpc saveUserInfo (UserInfoRequest) returns (UserInfoResponse);
    rpc getUserLocation (UserLocationRequest) returns (UserLocationResponse);
    rpc saveUserLocation (UserLocationRequest) returns (UserLocationResponse);
    rpc getSkillRelation (SkillRelationRequest) returns (SkillRelationResponse);
    rpc saveSkillRelation (SkillRelationRequest) returns (SkillRelationResponse);
    rpc getItemRelation (ItemRelationRequest) returns (ItemRelationResponse);
    rpc saveItemRelation (ItemRelationRequest) returns (ItemRelationResponse);
}

message UserInfoRequest {
    int32 userid = 1;
    string nkname = 2;
    float curexp = 3;
    float maxexp = 4;
    float userlevel = 5;
    float curhp = 6;
    float maxhp = 7;
    float curmp = 8;
    float maxmp = 9;
    float attpower = 10;
    float statpoint = 11;
    float skillpoint = 12;
}

message UserInfoResponse {
    int32 userid = 1;
    string nkname = 2;
    float curexp = 3;
    float maxexp = 4;
    float userlevel = 5;
    float curhp = 6;
    float maxhp = 7;
    float curmp = 8;
    float maxmp = 9;
    float attpower = 10;
    float statpoint = 11;
    float skillpoint = 12;
}

message UserLocationRequest {
    int32 userid = 1;
    float xloc = 2;
    float yloc = 3;
    float zloc = 4;
}

message UserLocationResponse {
    int32 userid = 1;
    float xloc = 2;
    float yloc = 3;
    float zloc = 4;
}

message SkillRelationRequest {
    int32 userid = 1;
    int32 skillid = 2;
    string skillname = 3;
    int32 skilllevel = 4;
}

message SkillRelationResponse {
    int32 userid = 1;
    int32 skillid = 2;
    string skillname = 3;
    int32 skilllevel = 4;
}

message ItemRelationRequest {
    int32 userid = 1;
    string itemid = 2;
    string itemname = 3;
    int32 quantity = 4;
}

message ItemRelationResponse {
    int32 userid = 1;
    string itemid = 2;
    string itemname = 3;
    int32 quantity = 4;
}